--- a/index.html
+++ b/index.html
@@ -6,31 +6,43 @@
     <meta name="author" content="Черняев С.В.">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- favicons and whatever icons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="manifest.json">
+    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#ff5252">
+    <meta name="theme-color" content="#ffffff">
+
     <style>
-      @import 'https://fonts.googleapis.com/css?family=Anonymous+Pro';
-      pre { font-family: 'Anonymous Pro', monospace; }
+      @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400');
+      body {
+        font-family: 'Open Sans';
+        font-size: 36px;
+        font-weight: 300;
+        color: #ff5252;
+        text-align: center;
+     }
+     p.text {
+       color: #494949;
+       font-size: 24px;
+       font-weight: 300;
+       min-width: 360px;
+       max-width: 700px;
+       margin: 0 auto;
+     }
     </style>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <!-- favicon --> 
+    <!-- favicon -->
     <!-- <link href="assets/images/favicon.ico" rel="icon"> -->
     <meta name="yandex-verification" content="a0a2aa474f9af4ea" />
   </head>
   <body>
-<pre>
-          oooo                                        o8o                      
-          `888                                                                 
- .ooooo.   888 .oo.    .ooooo.  oooo d8b ooo. .oo.   oooo   .oooo.    .ooooo.  oooo    ooo     .ooooo.   .ooooo.  ooo. .oo.  .oo.   
-d88' `"Y8  888P"Y88b  d88' `88b `888""8P `888P"Y88b  `888  `P  )88b  d88' `88b `88.  .8'      d88' `"Y8 d88' `88b `888P"Y88bP"Y88b
-888        888   888  888ooo888  888      888   888   888   .oP"888  888ooo888  `88..8'       888       888   888  888   888   888 
-888   .o8  888   888  888    .o  888      888   888   888  d8(  888  888    .o   `888'    .o. 888   .o8 888   888  888   888   888  
-`Y8bod8P' o888o o888o `Y8bod8P' d888b    o888o o888o o888o `Y888""8o `Y8bod8P'    `8'     Y8P `Y8bod8P' `Y8bod8P' o888o o888o o888o 
-
-
-</pre>
-<pre>email: info at cherniaev.com</pre>
+  <p><img src="assets/images/CH-logo.png" width="112" height="50" /> <span>CHERNIAEV.com</span</p>
+    <!-- <p class="text">Дизайн с вниманием к деталям. Сайтами наших клиентов приятно пользоваться, они решают задачи бизнеса и отлично работают на мобильных устройствах.</p> -->
 </body>
 </html>
